<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activites.MyCardActivity">


    <include
        android:id="@+id/Card_toolbar"
        layout="@layout/toolbar">

    </include>

    <TextView
        android:id="@+id/Card_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cairo"
        android:gravity="center"
        android:text="@string/Card"
        android:textColor="@color/durban_White"
        android:textSize="@dimen/dimen_text_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/RV1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/start_end"
        android:layout_marginRight="@dimen/start_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Card_Title">

    </android.support.v7.widget.RecyclerView>


    <TextView
        android:id="@+id/Card_TotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_dp_20"
        android:text="@string/Total"
        android:textColor="@color/red"
        android:textSize="@dimen/dimen_text_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RV1" />

    <Button
        android:id="@+id/MYCard_confirmBuying_BT"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginStart="@dimen/album_dp_40"
        android:layout_marginTop="@dimen/album_dp_20"
        android:layout_marginEnd="@dimen/album_dp_40"
        android:background="@drawable/red_button"
        android:text="@string/OK"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_text_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Card_TotalPrice" />

    <ImageView
        android:id="@+id/MYCard_Back_IB"
        android:layout_width="50dp"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="92dp"
        android:shadowColor="#41ff4800"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>